welcome.lessons.welcome.array.island.Island.scala.error
island:6: error: value =+ is not a member of Int
			if ((level==0 && num(i)==1) || (level==1 && num(i)==2)) level =+ 1
                                                                                      ^island:7: error: value += is not a member of Int
			i += 1
                          ^